# controller/admin/auth_controller.go
@@ -26,6 +26,7 @@ func (controller *AuthController) Route(app *fiber.App) {
 // @Tags         Auth
 // @Accept       json
 // @Produce      json
+// @Param        request body request.LoginUserPayload  true " "
 // @Success      200  {object}  response.WebResponse
 // @Failure      404  {object}  response.WebResponse
 // @Failure      500  {object}  response.WebResponse
