# models/request/menu.go
@@ -1,0 +1,10 @@
+package request
+
+type Menu struct {
+	Name     string `json:"name"`
+	ParentId *uint  `json:"parentId"`
+}
+
+type MenuItem struct {
+	ProductCategoryId uint `json:"productCategoryId"`
+}
